<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_redondeado_login"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Transfer" >

    <TextView
        android:id="@+id/tv_iban_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_From"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Blanco_nuclear" />

    <Spinner
        android:id="@+id/sp_accounts_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_To"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Blanco_nuclear" />

    <Spinner
        android:id="@+id/sp_accounts_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_amount_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_amount"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Blanco_nuclear" />

    <EditText
        android:id="@+id/et_transfer_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

</LinearLayout>
