<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    style="@style/BankAPP"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@drawable/layout_redondeado_login"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".login" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <ImageView
            android:id="@+id/ivSex"
            android:layout_width="32dp"
            android:layout_height="64dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/str_User"
            android:src="@drawable/account" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_User"
                android:textColor="@color/Blanco_nuclear" />

            <EditText
                android:id="@+id/et_User"
                style="@style/EditTextBankAPP"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/Blanco_nuclear"
                android:textColorLink="@color/Blanco_nuclear" >

                <requestFocus />
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="32dp"
            android:layout_height="64dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/str_User"
            android:src="@drawable/key_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_iban_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_Password"
                android:textColor="@color/Blanco_nuclear" />

            <EditText
                android:id="@+id/et_Passw"
                style="@style/EditTextBankAPP"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/Blanco_nuclear"
                android:textColorLink="@color/Blanco_nuclear" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_Login"
        style="@style/ButtonBankAPP"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="248dp"
        android:background="@drawable/bankapp_list_activated_holo"
        android:enabled="true"
        android:padding="0dp"
        android:text="@string/act_login"
        android:textColor="@color/Blanco_nuclear"
        android:textColorLink="@color/Blanco_nuclear" />

</LinearLayout>